--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@ Kelowna Wine Trails and Tours offers group tours of the Kelowna area wineries. G
 ENTER STUDENT INFORMATION HERE 
 ==========================================
 CCTB project DevOps course
-STUDENT NAME: 
-STUDENT ID:
+STUDENT NAME: DENIS BICUDO KAROLAK
+STUDENT ID: CT1004047
 SQAC114
 ==========================================
 -->
@@ -90,7 +90,7 @@ var hostname = window. location. hostname;
             visibility:hidden;" alt="Flying bee" height="179" width="144" />
 
    <h1> Kelowna Wine Trails and Tours</h1>
-   <h3> Student name / email </h3>
+   <h3> Denis Bicudo Karolak / denis@dk.com </h3>
 	<p id="gfg"></p>
    <hr size="1" color="#b6bcbb"> <br />
 
